@@ -1,7 +1,6 @@
 # Default Bluelog configuration file
 #
-# Unless noted otherwise, all values in this file should either be a
-# 0 (Disabled) or 1 (Enabled).
+# Unless noted otherwise, all values in this file should either be YES or NO.
 #
 # There are some sanity checks in place, but trying to set unreasonable numbers
 # or odd characters for values may cause magic smoke to escape.
@@ -10,75 +9,75 @@
 #--------------------------------Basic Options---------------------------------#
 
 # VERBOSE: Display found devices on the console.
-VERBOSE = 0
+VERBOSE = NO;
 
 # QUIET: Turn off nonessential terminal output.
-QUIET = 0
+QUIET = NO;
 
 # DAEMON: Daemonize Bluelog so that it runs in the background.
-DAEMON = 0
+DAEMON = NO;
 
 # HCIDEVICE: The Bluetooth interface number to use for scanning. The default
 # is 0, which corresponds to hci0. 
-HCIDEVICE = 0
+HCIDEVICE = NO;
 
 #-------------------------------Logging Options--------------------------------#
 
 # GETNAME: Perform name inquiry on discovered devices.
-GETNAME = 0
+GETNAME = NO;
 
 # GETMANUFACTURER: Perform hardware manufacturer lookups on discovered devices.
-GETMANUFACTURER = 0
+GETMANUFACTURER = NO;
 
 # SHOWCLASS: Write the raw device class to the log file.
-SHOWCLASS = 0
+SHOWCLASS = NO;
 
 # FRIENDLYCLASS: Write human readable class info to log file rather than raw.
-FRIENDLYCLASS = 0
+FRIENDLYCLASS = NO;
 
 # SHOWTIME: Write timestamps to log file.
-SHOWTIME = 0
+SHOWTIME = NO;
 
 # OBFUSCATE: Hide the device part of the MAC, leave OUI intact.
-OBFUSCATE = 0
+OBFUSCATE = NO;
 
 # ENCODE: Perform one-way hash on discovered MAC.
-ENCODE = 0
+ENCODE = NO;
 
 # AMNESIA: Number of minutes until Bluelog "forgets" a discovered device, and
 # logs it again as if it's new. Setting this value to 0 will cause Bluelog
 # to continually log the same devices. Set to -1 to disable amnesia mode.
-AMNESIA = -1
+AMNESIA = -1;
 
 #-------------------------------Output Options---------------------------------#
 
 # LIVEMODE: Switch into "Bluelog Live", see README.LIVE for details.
-LIVEMODE = 0
+LIVEMODE = NO;
 
 # BLUEPROPRO: Setup log file for .ronin's BPP project.
-BLUEPROPRO = 0
+BLUEPROPRO = NO;
 
 # SYSLOGONLY: Write log entries to syslog. See README.NET
-SYSLOGONLY = 0
+SYSLOGONLY = NO;
 
 # UDPONLY: Write log entries to UDP socket. See README.NET
-UDPONLY = 0
+UDPONLY = NO;
 
 #-------------------------------Network Options--------------------------------#
 
 # NODENAME: Uncomment to manually set node name. Default is system hostname.
-#NODENAME = Bluelog Node
+#NODENAME = Bluelog Node;
 
 # SERVERIP: The IP Bluelog should send UDP packets to.
-SERVERIP = 127.0.0.1
+SERVERIP = 127.0.0.1;
 
 # SERVERPORT: Listening port on server.
-SERVERPORT = 1123
+SERVERPORT = 1123;
 
 # PREFIX: Start each UDP message with the node's name.
-PREFIX = 1
+PREFIX = YES;
 
 # BANNER: Report when first connecting to server.
-BANNER = 0
+BANNER = NO;
 
 # EOF
